--- a/app/blocks/divider/divider.scss
+++ b/app/blocks/divider/divider.scss
@@ -2,7 +2,12 @@
   $b: &;
 
   display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
   width: 100%;
   height: 1px;
+  -webkit-appearance: none;
+  appearance: none;
   background-color: $color-border-light;
 }
