--- a/app/blocks/logo/logo.scss
+++ b/app/blocks/logo/logo.scss
@@ -3,11 +3,13 @@
 
   position: relative;
   display: inline-block;
+  width: 171px;
   height: 54px;
   font-size: 0;
   line-height: 0;
 
   @include screen('sm', max) {
+    width: 127px;
     height: 40px;
   }
 
@@ -47,6 +49,7 @@
 
   &_footer {
     @include screen('sm', max) {
+      width: 171px;
       height: 54px;
     }
 
