--- a/app/blocks/nav-list/nav-list.scss
+++ b/app/blocks/nav-list/nav-list.scss
@@ -7,4 +7,22 @@
     line-height: (50/20);
     font-weight: 700;
   }
+
+  &_small {
+
+    .link {
+      @include text16;
+
+      line-height: (28/16);
+      font-weight: 700;
+      max-width: 130px;
+
+      @include screen('sm') {
+        @include heading-4;
+
+        line-height: (39/20);
+        max-width: 100%;
+      }
+    }
+  }
 }
