--- a/app/blocks/news/news.scss
+++ b/app/blocks/news/news.scss
@@ -25,6 +25,10 @@
       @include screen('lg') {
         margin-bottom: 17px;
       }
+
+      @include screen('sm') {
+        margin-bottom: 13px;
+      }
     }
   }
 
@@ -48,6 +52,10 @@
 
     &:not(:last-child) {
       margin-bottom: 6px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
   }
 
@@ -64,6 +72,10 @@
 
     &:not(:last-child) {
       margin-bottom: 10px;
+
+      @include screen('sm') {
+        margin-bottom: 14px;
+      }
     }
 
     #{$b}:hover & {
@@ -80,6 +92,8 @@
 
     @include screen('sm') {
       @include text;
+
+      line-height: 1.45;
     }
   }
 }
