--- a/app/blocks/social/social.scss
+++ b/app/blocks/social/social.scss
@@ -3,10 +3,12 @@
 
   display: inline-block;
   font-size: 0;
+  overflow: hidden;
 
   &__icon {
     display: inline-block;
     font-size: 0;
+    min-width: 26px;
     width: 26px;
     height: 30px;
     fill: $color-basic;
@@ -17,6 +19,7 @@
     }
 
     #{$b}_big & {
+      min-width: 32px;
       width: 32px;
       height: 37px;
     }
