--- a/app/blocks/socials/socials.scss
+++ b/app/blocks/socials/socials.scss
@@ -2,10 +2,19 @@
   $b: &;
 
   display: flex;
+  flex-wrap: wrap;
   font-size: 0;
   line-height: 0;
+  min-width: 158px;
+  margin-top: -10px;
+
+  &_big {
+    min-width: 194px;
+  }
 
   &__item {
+    padding-top: 10px;
+
     &:not(:last-child) {
       margin-right: 18px;
 
