--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -25,6 +25,10 @@
       @include screen('lg') {
         margin-bottom: 4px;
       }
+
+      @include screen('sm') {
+        margin-bottom: 7px;
+      }
     }
   }
 
@@ -68,8 +72,16 @@
       margin-top: 0px;
     }
 
+    @include screen('sm') {
+      margin-top: -5px;
+    }
+
     &:not(:last-child) {
       margin-bottom: 8px;
+
+      @include screen('sm') {
+        margin-bottom: 4px;
+      }
     }
   }
 
@@ -86,6 +98,10 @@
 
     &:not(:last-child) {
       margin-bottom: 9px;
+
+      @include screen('sm') {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -111,6 +127,10 @@
 
     &:not(:last-child) {
       margin-bottom: 2px;
+
+      @include screen('sm') {
+        margin-bottom: 0;
+      }
     }
   }
 
