--- a/app/blocks/boxes/boxes.scss
+++ b/app/blocks/boxes/boxes.scss
@@ -7,6 +7,15 @@
   overflow: hidden;
   font-size: 0;
   line-height: 0;
+  min-height: 9px;
+
+  @include screen('sm') {
+    min-height: 6px;
+  }
+
+  &_big {
+    min-height: 19px;
+  }
 
   &__box {
     display: block;
