--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -139,3 +139,15 @@ button {
   background-color: transparent;
   font-family: $font-main;
 }
+
+hr {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  width: 100%;
+  height: 1px;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: $color-border-light;
+}
