--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -5,9 +5,26 @@
   border-top: 1px solid rgba($color-basic-light, .21);
   padding: 63px 0 0;
 
+  @include screen('lg') {
+    padding-top: 59px;
+  }
+
+  @include screen('sm') {
+    padding-top: 48px;
+  }
+
   &__top {
     display: flex;
     margin-bottom: 64px;
+
+    @include screen('lg') {
+      flex-wrap: wrap;
+      margin-bottom: 50px;
+    }
+
+    @include screen('sm') {
+      margin-bottom: 38px;
+    }
   }
 
   &__logo {
@@ -15,8 +32,35 @@
     min-width: 230px;
     width: 234px;
 
+    @include screen('lg') {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 35px;
+    }
+
+    @include screen('sm') {
+      display: block;
+      margin-bottom: 30px;
+    }
+
     .logo {
       margin-top: -16px;
+
+      @include screen('lg') {
+        margin-top: -12px;
+      }
+
+      @include screen('sm') {
+        margin-top: 0;
+        margin-bottom: 28px;
+      }
+    }
+  }
+
+  &__info {
+    @include screen('sm') {
+      width: 100%;
     }
   }
 
@@ -26,7 +70,9 @@
 
     @include screen('sm') {
       display: block;
+      width: 100%;
       margin-right: 0;
+      order: 2;
     }
   }
 
@@ -55,6 +101,12 @@
     flex-direction: column;
     align-items: flex-end;
     margin-left: auto;
+
+    @include screen('sm') {
+      width: 100%;
+      align-items: flex-start;
+      margin-bottom: 26px;
+    }
   }
 
   &__controls {
@@ -103,6 +155,14 @@
     border-top: 1px solid $color-border-light;
     box-sizing: border-box;
     padding: 33px 0 38px;
+
+    @include screen('lg') {
+      padding: 31px 0 35px;
+    }
+
+    @include screen('sm') {
+      padding: 27px 0 29px;
+    }
   }
 
   &__copyright {
@@ -111,6 +171,10 @@
     line-height: (28/16);
     font-weight: 700;
     color: $color-basic;
+
+    @include screen('sm') {
+      margin-bottom: 16px;
+    }
   }
 
   &__text {
@@ -123,7 +187,7 @@
     @include screen('sm') {
       @include text;
 
-      line-height: (20/14);
+      line-height: 1.45;
     }
   }
 }
